# ASC

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  QUICKSTART.md  README.md
.github/workflows/: ci.yml
asc-standard/: .gitignore  ASC.md  CHANGELOG.md  CODEOWNERS  README.md
asc-standard/.github/: SECURITY.md  pull_request_template.md
asc-standard/.github/workflows/: ci.yml  conformance.yml  kernel-ci.yml  release.yml  reproducibility.yml  sbom-attestation.yml
asc-standard/conformance/fixtures/: replay-seed-uas-small.json
asc-standard/conformance/profiles/: uas-small-suite.yaml
asc-standard/conformance/reports/: README.md
asc-standard/conformance/vectors/: kernel-smoke.json
asc-standard/data/: retention-policy.md
asc-standard/docs/handbook/: README.md
asc-standard/docs/tutorials/: README.md
asc-standard/evidence/manifests/: api-contract-check.json  hashlock.json  kernel-test.json  releasepack.json  releasepack.tgz  replay-determinism.json  spec-hash.txt  temporal-guarantee.json  tracecheck-report.json
asc-standard/governance/: CHANGE_CONTROL.md  CHARTER.md  COMPLIANCE_POLICY.md  DEPRECATION_POLICY.md  RISK_ACCEPTANCE_POLICY.md  VERSIONING_POLICY.md  WORKING_GROUPS.md
asc-standard/proofs/: assumptions-register.md  theorem-index.md
asc-standard/reference/kernel/: Cargo.toml
asc-standard/reference/kernel/crates/asc-conformance-kernel/: Cargo.toml
asc-standard/reference/kernel/crates/asc-conformance-kernel/tests/: determinism.rs  precedence.rs  runtime_from_repo.rs
asc-standard/reference/kernel/crates/asc-contract/: Cargo.toml
asc-standard/reference/kernel/crates/asc-contract/src/: lib.rs
asc-standard/reference/kernel/crates/asc-kernel-model/: Cargo.toml
asc-standard/reference/kernel/crates/asc-kernel-model/src/: arbitration.rs  checks.rs  engine.rs  generated_profile.rs  generated_thresholds.rs  lib.rs
asc-standard/reference/kernel/crates/asc-kernel-runtime/: Cargo.toml
asc-standard/reference/kernel/crates/asc-kernel-runtime/src/: runtime.rs
asc-standard/reference/kernel/crates/asc-logging/: Cargo.toml
asc-standard/reference/kernel/crates/asc-logging/src/: lib.rs
asc-standard/reference/kernel/crates/asc-types/: Cargo.toml
asc-standard/reference/kernel/crates/asc-types/src/: generated_reason_codes.rs  lib.rs  model.rs  verdict.rs
asc-standard/safety-case/compliance-maps/: arp4754a-map.md  astm-easa-faa-map.md  do178c-map.md
asc-standard/safety-case/hazards/: FHA.md  PSSA.md
asc-standard/safety-case/traceability/: req_to_proof.csv  req_to_spec.csv  spec_to_test.csv  test_to_evidence.csv
asc-standard/spec/: glossary.yaml
asc-standard/spec/asc/: audit-log-schema.yaml  energy-contract.yaml  flow-phs.yaml  guarantees-stl.yaml  interlock-gate.yaml  invariants-rcbf.yaml  state-se3.yaml  tuple.yaml
codegen/: Cargo.toml
codegen/src/: lib.rs  main.rs
conformance/: Cargo.toml
conformance/src/: lib.rs  main.rs
evidence/: Cargo.toml
evidence/artifacts/: example.txt  final.txt
evidence/src/: lib.rs  main.rs
kernel/: Cargo.toml
kernel/src/: contracts.rs  generated.rs  lib.rs  runtime.rs  types.rs
spec/: README.md
spec/contracts/: flight_control.yaml
spec/interfaces/: sensor.yaml
spec/types/: core.yaml
(+25 files in other folders)
