[workspace]
resolver = "2"
members = [
    "kernel",
    "codegen",
    "conformance",
    "evidence",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ASC Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/morphicsnet/ASC"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
anyhow = "1.0"

# CLI and utilities
clap = { version = "4.5", features = ["derive"] }

# Testing
proptest = "1.5"

[profile.release]
# Deterministic builds for safety-critical applications
opt-level = 3
lto = true
codegen-units = 1
strip = false  # Keep symbols for evidence artifacts
panic = "abort"
overflow-checks = true

[profile.dev]
# Development builds with safety checks
overflow-checks = true
debug = true
